# Extreme-password-generator

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  Readme_RU.md  icon.rc  icons.rc  main.cpp  small_icon.rc  version.info
include/: epg_alphabet.hpp  epg_config.hpp  epg_config.hpp.in  epg_generator.hpp  epg_window.hpp  epg_window_constants.hpp  resource.hpp
resources/: epg.desktop
scripts/: build.sh  install.sh
src/: epg_alphabet.cpp  epg_generator.cpp  epg_window.cpp
